responsive for home and login page

--- a/index.html
+++ b/index.html
@@ -32,22 +32,6 @@
       <div class="outer-main">
         <div class="main-image" id="section-1">
         <div class="left-div">
-          <h2><span>Listen</span> to<br>new music.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-              do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Quis ipsum suspendisse ultrices gravida.</p>
-            <div class="main-buttons">
-              <input class="button" type="button" name="button" value="DOWNLOAD NOW"/>
-              <input class="button" type="button" name="button" id="start-trial" value="START FREE TRIAL"/>
-            </div>
-        </div>
-        <div class="right-div">
-          <img id="bg-image" src="/pics/musicimage.webp" />
-        </div>
-      </div>
-
-      <div class="main-image-1" id="section-2">
-        <div class="left-div">
           <h2><span>Music</span> for<br>everyone.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
               do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -61,7 +45,28 @@
           <img id="bg-image" src="/pics/musicimage.webp" />
         </div>
       </div>
+
+      <!-- <div class="main-image-1" id="section-2">
+        <div class="left-div">
+          <h2><span>Listen</span> to<br>new music.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+              do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+              Quis ipsum suspendisse ultrices gravida.</p>
+            <div class="main-buttons">
+              <input class="button" type="button" name="button" value="DOWNLOAD NOW"/>
+              <input class="button" type="button" name="button" id="start-trial" value="START FREE TRIAL"/>
+            </div>
+        </div>
+        <div class="right-div">
+          <img id="bg-image" src="/pics/musicimage.webp" />
+        </div>
+      </div> -->
       </div>
+
+
+
+
+      
       <!-- <div class="main-image" id="section-1">
         <div class="left-div">
           <h2><span>Listen</span> to<br>new music.</h2>
