--- a/login.html
+++ b/login.html
@@ -10,16 +10,31 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div class="main">
         <div class="outer-div">
             <div class="left-div">
                 <h1>Sign in</h1>
                 <div class="social-container">
-
+                    <div class="link">
+                        <a href="https://www.facebook.com/">
+                            <i class="fab fa-facebook-f" id="link"></i>
+                        </a>
+                    </div>
+                    <div class="link">
+                        <a href="https://accounts.google.com/">
+                            <i class="fab fa-google-plus-g" id="link"></i>
+                        </a>
+                    </div>
+                    <div class="link">
+                        <a href="https://www.linkedin.com/">
+                            <i class="fab fa-linkedin-in" id="link"></i>
+                        </a>
+                    </div>
                 </div>
                 <span>use your account</span>
                 <input class="button-1" id="email" type="email" name="button" placeholder="Email"/>
                 <input class="button-1" id="password" type="password" name="button" placeholder="Password"/>
+                <a href="#">Forgot your password?</a>
+                <button class="button-2" type="button">SIGN IN</button>
             </div>
             <div class="right-div">
                 <h1>Hello, Friend!</h1>
@@ -27,6 +42,5 @@
                 <button class="button" type="button">SIGN UP</button>
             </div>
         </div>
-    </div>
 </body>
 </html>
