contact page added

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,114 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>contact</title>
+    <link rel="stylesheet" href="contact.css">
+    <link rel="shortcut icon" href="/pics/hubmusic Logo.png" type="image/x-icon">
 </head>
 <body>
-    <h1>this is contact page</h1>
+    <div class="main">
+        <header class="header">
+            <h2><span>HUB</span>MUSIC</h2>
+            <div class="header-list">
+              <div class="list">Home</div>
+              <div class="list">About</div>
+              <div class="list" id="pages">Pages
+                <div class="sub-pages">
+                  <ul type="none">
+                    <li>Category</li>
+                    <li>Playlist</li>
+                    <li>Artist</li>
+                    <li>Blog</li>
+                    <li>Contact</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="list"><a href="/news.html">News</a></div>
+              <div class="list"><a href="/contact.html">Contact</a></div>
+            </div>
+            <div class="header-option">
+              <p>Help</p>
+              <p id="bar">|</p>
+              <p><a href="/login.html">Login</a></p>
+              <span><p>Create an account</p></span>
+            </div>
+          </header>
+
+          <div class="outer-div">
+            <div class="left-inner-div">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3488.8016135928083!2d79.48575251493276!3d29.02286258226549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39091c4086dd02cb%3A0x39248f0543ed8f5a!2sG.B.%20Pant%20University%20Of%20Agriculture%20And%20Technology!5e0!3m2!1sen!2sin!4v1647682911787!5m2!1sen!2sin"
+               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="right-inner-div">
+              <h2>Get in touch</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                 tempor incididunt ut labore et dolore mag na aliqua. 
+                Quis ipsum suspendisse ultrices gravida. 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed doe iusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Quis ipsum suspendisse ultrices gravida.</p>
+                <ul type="none">
+                  <li>Main Road , No 25/11</li>
+                  <li>+91 987654321</li>
+                  <li>shafinbinshakeel@gmail.com</li>
+                </ul>
+                <form action="post">
+                  <input type="text" name="name" id="name" class="name" placeholder="Your name" maxlength="50">
+                  <input type="email" name="email" id="email" class="email" placeholder="Your e-mail" maxlength="30">
+                  <input type="text" name="subject" id="subject" class="subject" placeholder="Subject" maxlength="100">
+                  <textarea type="comment" name="message" id="message" class="message" placeholder="Message" maxlength="500"></textarea>
+                  <button type="submit" class="submit" name="submit">SEND MESSAGE</button>
+                 </form>
+            </div>
+          </div>
+
+          <footer class="footer">
+            <div class="footer-left">
+              <div class="footer-logo"><span>HUB</span>MUSIC</div>
+              <div class="copyright">
+                COPYRIGHT ©2022 ALL RIGHTS RESERVED | THIS WEBSITE 
+                  IS MADE WITH ❤️<i class="fa fa-heart-o" aria-hidden="true"></i>
+                  BY <span>SHAFIN</span>
+              </div>
+              <div class="social-links">
+                <i class="fab fa-instagram" id="link"></i>
+                <i class="fab fa-pinterest" id="link"></i>
+                <i class="fab fa-facebook-f" id="link"></i>
+                <i class="fab fa-twitter" id="link"></i>
+                <i class="fab fa-linkedin-in" id="link"></i>
+                <i class="fab fa-youtube" id="link"></i>
+              </div>
+            </div>
+            <div class="footer-right">
+              <div class="footer-logo1"><span>HUB</span>MUSIC</div>
+              <div class="footer-box">
+                <h4>ABOUT US</h4>
+                <ul type="none">
+                  <li>Our Story</li>
+                  <li>Hub Music Blog</li>
+                  <li>History</li>  
+                </ul>
+              </div>
+              <div class="footer-box">
+                <h4>PRODUCTS</h4>
+                <ul type="none">
+                  <li>Music</li>
+                  <li>Subscription</li>
+                  <li>Custom Music</li>
+                  <li>Footage</li>  
+                </ul>
+              </div>
+              <div class="footer-box">
+                <h4>PLAYLISTS</h4>
+                <ul type="none">
+                  <li>Newsletter</li>
+                  <li>Careers</li>
+                  <li>Press</li>
+                  <li>Contact</li>  
+                </ul>
+              </div>
+            </div>
+          </footer>
+    </div>
 </body>
 </html>
