--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Website</title>
+    <link rel="shortcut icon" href="/pics/hubmusic Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -17,7 +18,17 @@
         <div class="header-list">
           <div class="list">Home</div>
           <div class="list">About</div>
-          <div class="list">Pages</div>
+          <div class="list" id="pages">Pages
+            <div class="sub-pages">
+              <ul type="none">
+                <li>Category</li>
+                <li>Playlist</li>
+                <li>Artist</li>
+                <li>Blog</li>
+                <li>Contact</li>
+              </ul>
+            </div>
+          </div>
           <div class="list"><a href="/news.html">News</a></div>
           <div class="list"><a href="/contact.html">Contact</a></div>
         </div>
@@ -277,6 +288,7 @@
           </div>
         </div>
         <div class="footer-right">
+          <div class="footer-logo1"><span>HUB</span>MUSIC</div>
           <div class="footer-box">
             <h4>ABOUT US</h4>
             <ul type="none">
